# simple-image-storage

./: .gitignore  Dockerfile  README.md  config.ini  config.yaml  docker-compose.yml  example_config.yml  log_conf.yaml  main.py  pyproject.toml  sis_database.sqlite
app/: config.py  main.py  sql.py  utils.py
data/: sis_database.sqlite
